# MaaXuexi

./: .gitignore  README.md  main.py  nuitka-package.config.yml  pyproject.toml  requirements.txt  utils.py  webui.py
.github/workflows/: build.yml
config/: config.json
front/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
front/src/: App.vue
front/src/assets/: main.css  ws.js
front/src/components/: left.vue  medium.vue  right.vue
resource/pipeline/: actions.json
updater/: go.mod  mian.go
